<resources>
    <string name="app_name">peach-garden</string>
    <string name="English">英</string>
    <string name="French">法</string>
    <string name="Russian">俄</string>
    <string name="Japan">日</string>
    <string name="Korean">韩</string>
    <string name="grand1">简单</string>
    <string name="grand2">中等</string>
    <string name="grand3">困难</string>
    <string name="test_text">我是简介我是简介我是简介我是简介我是简介我是简介我是简介我是简介
            我是简介我是简介我是简介我是简介我是简介我是简介我是简介我是简介我是简介我是简介我
            是简介我是简介我是简介我是简介我是简介我是简介我是简介我是简介我是简介我是简介我是
            简介我是简介我是简介我是简介我是简介我是简介我是简介我是简介我是简介我是简介我是简介
            我是简介我是简介我是简介我是简介我是简介我是简介我是简介我是简介我是简介我是简介我
            是简介我是简介我是简介我是简介我是简介我是简介我是简介我是简介我是简介我是简介我是
            简介我是简介我是简介</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="setting_guanyu_text">"感谢您下载和使用桃花源APP。我们是一个年轻的团队，您可以通过xxxx方式关注我们。

关注以下官方账号，获取更多资讯：

新浪微博：@桃花源APP
公众号：桃花源
邮箱：xxxx@XX.com
网址：xxxxxx.com"</string>
</resources>