<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background_color">
    <ImageButton
        android:id="@+id/back_btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_arrow_back_48px"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"></ImageButton>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp">

        <LinearLayout
            android:layout_marginTop="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerInParent="true">
            <Button
                android:id="@+id/English"
                android:layout_marginRight="28dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape1"
                android:text="@string/English"
                android:textSize="18dp"></Button>
            <Button
                android:id="@+id/French"
                android:layout_marginRight="28dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape1"
                android:text="@string/French"
                android:textSize="18dp"></Button>
            <Button
                android:id="@+id/Russian"
                android:layout_marginRight="28dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape1"
                android:text="@string/Russian"
                android:textSize="18dp"></Button>
            <Button
                android:id="@+id/Japan"
                android:layout_marginRight="25dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape1"
                android:text="@string/Japan"
                android:textSize="18dp"></Button>
            <Button
                android:id="@+id/Korean"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape1"
                android:text="@string/Korean"
                android:textSize="18dp"></Button>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>