<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/trancontent_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/arrow_back"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@color/shizhai_background_color">
        <Button
            android:id="@+id/English"
            android:layout_marginRight="28dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/app_color_red"
            android:text="@string/English"
            android:textSize="18dp"
            android:textColor="@color/white"></Button>
        <Button
            android:id="@+id/French"
            android:layout_marginRight="28dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="@string/French"
            android:textSize="18dp"></Button>
        <Button
            android:id="@+id/Russian"
            android:layout_marginRight="28dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="@string/Russian"
            android:textSize="18dp"></Button>
        <Button
            android:id="@+id/Japan"
            android:layout_marginRight="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="@string/Japan"
            android:textSize="18dp"></Button>
        <Button
            android:id="@+id/Korean"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="@string/Korean"
            android:textSize="18dp"></Button>
    </LinearLayout>


    <RelativeLayout
    android:padding="15dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/shizhai_background_color">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shape_list">
    <TextView
        android:padding="10dp"
        android:id="@+id/tracontent"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:textStyle="bold"
        android:textSize="18sp"/></ScrollView>
</RelativeLayout>
</LinearLayout>